force-app/main/default/objects/TermosCondicoes__mdt/TermosCondicoes__mdt.object-meta.xml
<CustomObject>
    <description>Termos e condições da tela de solicitação de voo para realizar reserva.</description>
    <label>Termos e Condições</label>
    <pluralLabel>Termos e Condições</pluralLabel>
</CustomObject>