force-app/main/default/objects/TermosCondicoes__mdt/fields/Idioma__c.field-meta.xml
<CustomField>
    <fullName>Idioma__c</fullName>
    <description>Idiomas para o texto de termos e condições.</description>
    <inlineHelpText>Idiomas para o texto de termos e condições.</inlineHelpText>
    <label>Idioma</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>pt_BR</fullName>
                <default>true</default>
                <label>Português (Brasil)</label>
            </value>
            <value>
                <fullName>en_US</fullName>
                <label>Inglês</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>