force-app/main/default/objects/TermosCondicoes__mdt/fields/Prioridade__c.field-meta.xml
<CustomField>
    <fullName>Prioridade__c</fullName>
    <description>Prioridade de retorno do idioma</description>
    <inlineHelpText>Prioridade de retorno do idioma</inlineHelpText>
    <label>Prioridade</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>