force-app/main/default/objects/TermosCondicoes__mdt/fields/Termos__c.field-meta.xml
<CustomField>
    <fullName>Termos__c</fullName>
    <description>Salva os termos e condições para solicitar um voo.</description>
    <inlineHelpText>Salva os termos e condições para solicitar um voo.</inlineHelpText>
    <label>Termos</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>